--- a/Prevu.Synoptics.V3168_Sirplaste/Pages/P810.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Pages/P810.xaml
@@ -12,7 +12,7 @@
              x:Class="Prevu.Synoptics.P810" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Width="40" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="952" Canvas.Top="709" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe Width="40" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="952" Canvas.Top="727" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -22,7 +22,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe StatusComponent="868-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="696" Canvas.Top="670" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe StatusComponent="868-01-MA1" RenderTransformOrigin="0.5,0.5" Color="Air" Canvas.Left="696" Canvas.Top="682" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -32,7 +32,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="82" StatusComponent="873-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1186" Canvas.Top="454" >
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="82" StatusComponent="873-01-MA1" RenderTransformOrigin="0.5,0.5" Color="ByProduct" Canvas.Left="1194" Canvas.Top="454" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -83,7 +83,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="160" StatusComponent="812-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="532" Canvas.Top="479" />
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="138" RenderTransformOrigin="0.5,0.5" StatusComponent="870-01-MA1" PipeHeight="Medium" Height="25" Canvas.Left="809" Canvas.Top="661" >
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5" StatusComponent="870-01-MA1" PipeHeight="Medium" Height="25" Canvas.Left="809" Canvas.Top="673" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -123,7 +123,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="870-01-MA1" PipeHeight="Medium" Height="18" Canvas.Left="736" Canvas.Top="501" >
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="148" RenderTransformOrigin="0.5,0.5" StatusComponent="870-01-MA1" PipeHeight="Medium" Height="18" Canvas.Left="736" Canvas.Top="502" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -133,7 +133,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="870-01-MA1" PipeHeight="Medium" Height="18" Canvas.Left="780" Canvas.Top="634" >
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.5,0.5" StatusComponent="870-01-MA1" PipeHeight="Medium" Height="18" Canvas.Left="780" Canvas.Top="646" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -183,7 +183,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="59" RenderTransformOrigin="0.5,0.5" StatusComponent="873-01-MA1" Canvas.Left="1237" Canvas.Top="481" >
+    <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="ByProduct" Width="59" RenderTransformOrigin="0.5,0.5" StatusComponent="873-01-MA1" Canvas.Left="1245" Canvas.Top="482" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -206,20 +206,20 @@
     <Machines:VS_Airlock HorizontalAlignment="Left" VerticalAlignment="Center" Height="61" Width="64" Canvas.Left="909" Canvas.Top="100"/>
     <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Top" Height="22" Width="166" Canvas.Left="390" Canvas.Top="479"/>
     <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center" VerticalAlignment="Top" Height="22" Width="166" Canvas.Left="1035" Canvas.Top="446"/>
-    <Blowers:VT_CMM_BlowerAirCompressor Height="50" Canvas.Left="664" Canvas.Top="647" Width="50" HorizontalAlignment="Left" VerticalAlignment="Center" />
+    <Blowers:VT_CMM_BlowerAirCompressor Height="50" Canvas.Left="664" Canvas.Top="659" Width="50" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Machines:V01_SLX_MixingSiloScrew Canvas.Left="301" Canvas.Top="136" Height="284" Width="205" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Blowers:VT_CMM_BlowerAirCompressor Height="50" Canvas.Left="1041" Canvas.Top="190" Width="49" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VS_Airlock Canvas.Left="909" Canvas.Top="100" Height="61" Width="64" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_VB_VibratingScreen Canvas.Left="891" Canvas.Top="428" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_BBF_SingleBag Canvas.Left="1217" Canvas.Top="481" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_VS_Airlock Canvas.Left="778" Canvas.Top="561" Height="61" Width="64" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_BBF_SingleBag Canvas.Left="1225" Canvas.Top="464" Height="98" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_VS_Airlock Canvas.Left="778" Canvas.Top="573" Height="61" Width="64" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SA_Elutriator Canvas.Left="900" Canvas.Top="182" Height="224" Width="83" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="850-01-MA1" Canvas.Left="978" Canvas.Top="106"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="866-01-MA1" Canvas.Left="681" Canvas.Top="566" />
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="866-01-MA1" Canvas.Left="681" Canvas.Top="578" />
     <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="812-01-MA1" Canvas.Left="467" Canvas.Top="421"/>
@@ -229,32 +229,50 @@
     <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="873-01-MA1" Canvas.Left="1110" Canvas.Top="388" />
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-            ComponentName="873-62-BAG" Canvas.Left="1204" Canvas.Top="586" VerticalAlignment="Center" />
-    <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="873-VIEW" DetailsPageName="D873" HideComponentName="True" Canvas.Left="1302" Canvas.Top="586"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" 
+            ComponentName="873-62-BAG" Canvas.Left="1212" Canvas.Top="567" VerticalAlignment="Top" />
+    <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="873-VIEW" DetailsPageName="D873" HideComponentName="True" Canvas.Left="1310" Canvas.Top="567"/>
     <Labels:DeviceLabel 
             ComponentName="810-SILO" Canvas.Left="437" Canvas.Top="177" HorizontalAlignment="Left" VerticalAlignment="Center"  />
     <Labels:DetailsLabel ComponentName="810-VIEW" DetailsPageName="D810" HideComponentName="True" Canvas.Left="536" Canvas.Top="177" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:DeviceLabel 
-            ComponentName="868-01-MA1" Canvas.Left="563" Canvas.Top="648" HorizontalAlignment="Left" VerticalAlignment="Center" />
+            ComponentName="868-01-MA1" Canvas.Left="563" Canvas.Top="660" HorizontalAlignment="Center" VerticalAlignment="Top" />
     <Labels:DeviceLabel 
             ComponentName="854-01-MA1" Canvas.Left="1024" Canvas.Top="245" HorizontalAlignment="Left" VerticalAlignment="Center" />
     <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="810-01-MA1" 
             JumpToLabel="534-01-MA1" Canvas.Left="137" Canvas.Top="128"/>
-    <Machines:V01_ScarpaTrasporto Canvas.Left="784" Canvas.Top="637" Height="48" Width="64" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.49,-0.813"/>
-    <Labels:Pipe Width="147" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="976" Canvas.Top="668" Text="" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="225" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="971" Canvas.Top="724" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_DV_Diverter Canvas.Left="897" Canvas.Top="664" Height="49" HorizontalAlignment="Left" VerticalAlignment="Center" Width="91"/>
+    <Machines:V01_ScarpaTrasporto Canvas.Left="784" Canvas.Top="649" Height="48" Width="64" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.49,-0.813"/>
+    <Labels:Pipe Width="147" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="976" Canvas.Top="680" Text="" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="95" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="971" Canvas.Top="742" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_DV_Diverter Canvas.Left="897" Canvas.Top="676" Height="49" HorizontalAlignment="Center" VerticalAlignment="Top" Width="91"/>
     <Labels:DeviceLabel 
-      ComponentName="892-21-CV1" Canvas.Left="896" Canvas.Top="597" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="892-21-CV1" 
-            JumpToLabel="940-61-LEV" Canvas.Left="1064" Canvas.Top="637" />
+      ComponentName="892-21-CV1" Canvas.Left="896" Canvas.Top="609" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:JumpLabel 
       JumpFromLabel="892-21-CV1" 
-      JumpToLabel="894-21-CV1" Canvas.Left="1162" Canvas.Top="694" HorizontalAlignment="Left" VerticalAlignment="Center" />
+      JumpToLabel="894-21-CV1" Canvas.Left="1002" Canvas.Top="712" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="58" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="1123" Canvas.Top="742" VisibilityComponent="893-21-CV1" VisibilitySignal="MAT1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+      <Labels:Pipe.RenderTransform>
+        <TransformGroup>
+          <ScaleTransform/>
+          <SkewTransform/>
+          <RotateTransform Angle="90"/>
+          <TranslateTransform/>
+        </TransformGroup>
+      </Labels:Pipe.RenderTransform>
+    </Labels:Pipe>
+    <Labels:Pipe Width="95" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="1151" Canvas.Top="766" VisibilityComponent="893-21-CV1" VisibilitySignal="MAT1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:JumpLabel 
+      JumpFromLabel="893-21-CV1" 
+      JumpToLabel="880-61-LEV" Canvas.Left="1182" Canvas.Top="736" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="167" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="1155" Canvas.Top="680" Text="" VisibilityComponent="893-21-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_DV_Diverter Canvas.Left="1077" Canvas.Top="676" Height="49" Width="91" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:JumpLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            JumpFromLabel="892-21-CV1" 
+            JumpToLabel="940-61-LEV" Canvas.Left="1284" Canvas.Top="650" />
+    <Labels:DeviceLabel 
+      ComponentName="893-21-CV1" Canvas.Left="1077" Canvas.Top="610" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
