--- a/Prevu.Synoptics.V3168_Sirplaste/Pages/P940.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/Pages/P940.xaml
@@ -29,22 +29,12 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="80" StatusComponent="812-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="771" Canvas.Top="97" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="MAT1" VisibilityComponent="940-21-CV1">
+    <Labels:Pipe Width="80" StatusComponent="870-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="771" Canvas.Top="97" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilitySignal="MAT2" VisibilityComponent="893-21-CV1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
           <SkewTransform/>
           <RotateTransform Angle="90"/>
-          <TranslateTransform/>
-        </TransformGroup>
-      </Labels:Pipe.RenderTransform>
-    </Labels:Pipe>
-    <Labels:Pipe Width="193" StatusComponent="812-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="560" Canvas.Top="38" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1">
-      <Labels:Pipe.RenderTransform>
-        <TransformGroup>
-          <ScaleTransform/>
-          <SkewTransform/>
-          <RotateTransform Angle="0"/>
           <TranslateTransform/>
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
@@ -308,9 +298,6 @@
     <Labels:JumpLabel 
             JumpFromLabel="941-01-MA1" 
             JumpToLabel="880-61-LEV" Canvas.Left="1340" Canvas.Top="578" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:JumpLabel 
-            JumpFromLabel="940-61-LEV" 
-            JumpToLabel="892-21-CV1" Canvas.Left="518" Canvas.Top="8" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
             ComponentName="946-01-MA1" Canvas.Left="628" Canvas.Top="637" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel 
@@ -561,12 +548,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="541" StatusComponent="812-01-MA1" PipeHeight="Medium" Canvas.Left="811" Canvas.Top="38" VisibilityComponent="940-21-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_DV_Diverter Canvas.Left="737" Canvas.Top="33" Height="49" Width="91" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel 
-      ComponentName="940-21-CV1" Canvas.Left="675" Canvas.Top="58" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="168" StatusComponent="870-01-MA1" PipeHeight="Medium" Canvas.Left="648" Canvas.Top="57" Text="" VisibilityComponent="893-21-CV1" VisibilitySignal="MAT2" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel 
-      JumpFromLabel="940-21-CV1" 
-      JumpToLabel="880-61-LEV" Canvas.Left="1340" Canvas.Top="8" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+            JumpFromLabel="940-61-LEV" 
+            JumpToLabel="892-21-CV1" Canvas.Left="582" Canvas.Top="27" HorizontalAlignment="Left" VerticalAlignment="Center"/>
   </Canvas>
 </UserControl>
