V3168: Update on OverallView and Plantview. Fix jumplabel on P810 and P940

--- a/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
@@ -12,7 +12,7 @@
              lex:ResxLocalizationProvider.DefaultDictionary="Resources"             
              mc:Ignorable="d" 
               d:Background="{DynamicResource MaterialDesignPaper}">
-    <Canvas Height="753" Width="3123">
+    <Canvas Height="753" Width="3488">
         <Labels:Pipe Canvas.Left="1960" Canvas.Top="173" RenderTransformOrigin="0.5,0.5" Width="81" PipeHeight="Medium" StatusComponent="350-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="1893" Canvas.Top="241" RenderTransformOrigin="0.5,0.5" Width="144" PipeHeight="Medium" StatusComponent="350-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -24,7 +24,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2854" Canvas.Top="342" Width="85" PipeHeight="Medium" StatusComponent="812-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="2864" Canvas.Top="456" Width="139" PipeHeight="Medium" StatusComponent="908-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -74,7 +74,7 @@
         <Labels:Pipe Canvas.Left="1552" Canvas.Top="185" Width="81" PipeHeight="Medium" StatusComponent="322-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="1903" Canvas.Top="309" RenderTransformOrigin="0.5,0.5" Width="67" PipeHeight="Medium" StatusComponent="350-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
-        <Labels:Pipe Canvas.Left="2679" Canvas.Top="303" Width="222" PipeHeight="Medium" StatusComponent="812-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2679" Canvas.Top="303" Width="222" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="893-21-CV1" VisibilitySignal="MAT1"/>
         <Labels:Pipe Canvas.Left="2429" Canvas.Top="170" Width="244" PipeHeight="Medium" StatusComponent="534-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Canvas.Left="1154" Canvas.Top="272" Width="130" PipeHeight="Medium" StatusComponent="292-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="1190" Canvas.Top="187" Width="178" PipeHeight="Medium" StatusComponent="292-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
@@ -121,6 +121,40 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="2972" Canvas.Top="298" Width="151" PipeHeight="Medium" StatusComponent="942-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="3064" Canvas.Top="350" Width="110" PipeHeight="Medium" StatusComponent="942-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="3114" Canvas.Top="401" Width="140" PipeHeight="Medium" StatusComponent="942-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="3209" Canvas.Top="365" Width="80" PipeHeight="Medium" StatusComponent="942-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="2679" Canvas.Top="526" Width="244" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1"/>
+        <Labels:Pipe Canvas.Left="2566" Canvas.Top="413" Width="236" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="892-21-CV1" VisibilitySignal="MAT1">
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Labels:Pipe Canvas.Left="2701" Canvas.Top="262" Width="520" PipeHeight="Medium" StatusComponent="870-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="893-21-CV1" VisibilitySignal="MAT2"/>
         <Labels:Pipe Canvas.Left="572" Canvas.Top="112" Width="90" PipeHeight="Medium" StatusComponent="020-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
 
         <Machines:QX_HMI Height="82" Width="74" Canvas.Left="58" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -140,7 +174,7 @@
             </Separation:VSP_SeparationTank_wBottomScrew.RenderTransform>
         </Separation:VSP_SeparationTank_wBottomScrew>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1538" Canvas.Top="587" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="2728" Canvas.Top="587" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="2444" Canvas.Top="622" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="812" Canvas.Top="586" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Buffer_belt Height="96" Width="171" Canvas.Left="201" Canvas.Top="99" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:PR_Prerompitore Width="204" Height="208" Canvas.Left="286" Canvas.Top="203" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -152,17 +186,21 @@
         <Machines:V01_SLX_MixingSiloScrew Canvas.Left="2613" Canvas.Top="135" HorizontalAlignment="Center" VerticalAlignment="Top" Height="196" Width="132"/>
         <Machines:V01_WCE_Centrifuge Canvas.Left="1801" Canvas.Top="213" Height="112" Width="119" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:V01_DCE_Centrifuge Canvas.Left="2355" Canvas.Top="164" Height="116" Width="94" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:V01_BBF_SingleBag Canvas.Left="2846" Canvas.Top="366" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_BBF_SingleBag Canvas.Left="2883" Canvas.Top="507" Height="100" Width="100" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="3210" Canvas.Top="541" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="2871" Canvas.Top="284"/>
+        <Machines:V01_FKS_FlakesSorter_DoubleCH Canvas.Left="3187" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="364" Canvas.Left="174" Canvas.Top="52" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="620" Canvas.Left="615" Canvas.Top="52" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="620" Canvas.Left="1320" Canvas.Top="52" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="346"  Width="516" Canvas.Left="1986" Canvas.Top="120" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="387"  Width="452" Canvas.Left="2596" Canvas.Top="123" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="581"  Width="534" Canvas.Left="2551" Canvas.Top="37" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="257"  Width="290" Canvas.Left="3159" Canvas.Top="195" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <Labels:DeviceLabel x:Name="Q11" ComponentName="Q11" Canvas.Left="299" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="Q41" ComponentName="Q41" Canvas.Left="860" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="Q51" ComponentName="Q51" Canvas.Left="1586" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="Q61" ComponentName="Q61" Canvas.Left="2199" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel x:Name="Q91" ComponentName="Q91" Canvas.Left="2777" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="Q91" ComponentName="Q91" Canvas.Left="2493" Canvas.Top="567" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="Q01" ComponentName="Q01" Canvas.Left="50" Canvas.Top="200" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="ESTOP" ComponentName="ESTOP-AREA-01" Canvas.Left="50" Canvas.Top="75" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="HMI_01" ComponentName="HMI-01" Canvas.Left="50" Canvas.Top="380" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -172,9 +210,9 @@
         <Labels:DeviceLabel x:Name="S510" ComponentName="S510" Canvas.Left="1585" Canvas.Top="391" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="S610" ComponentName="S610" Canvas.Left="2199" Canvas.Top="391" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="S910" ComponentName="S910" Canvas.Left="2851" Canvas.Top="162" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="997" Canvas.Left="2936" Canvas.Top="285" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="997" Canvas.Left="2981" Canvas.Top="447" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="230" Canvas.Left="1025" Canvas.Top="300" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:GroupLabel GroupName="810" Canvas.Left="2642" Canvas.Top="336" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="810" Canvas.Left="2576" Canvas.Top="280" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="430" Canvas.Left="2084" Canvas.Top="259" Height="66" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="330" Canvas.Left="1529" Canvas.Top="115" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:GroupLabel GroupName="530" Canvas.Left="2355" Canvas.Top="302" HorizontalAlignment="Left" VerticalAlignment="Top"/>
@@ -184,5 +222,10 @@
         <Labels:ValueLabel Canvas.Left="1401" Canvas.Top="188" TrendName="LEVEL" ComponentName="320-41-LT1" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="2624" Canvas.Top="190" TrendName="WEIGHT" ComponentName="810-41-WT1" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="400" Canvas.Top="225" TrendName="LEVEL" ComponentName="020-41-LT1" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="Q91_Copia" ComponentName="Q92" Canvas.Left="3259" Canvas.Top="486" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel x:Name="S910_Copia" ComponentName="S920" Canvas.Left="3325" Canvas.Top="375" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="920" Canvas.Left="2996" Canvas.Top="337" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="920" Canvas.Left="3317" Canvas.Top="250" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:GroupLabel GroupName="880" Canvas.Left="2806" Canvas.Top="337" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
